general spacing cards fixes

--- a/blocks/b-banner/b-banner.css
+++ b/blocks/b-banner/b-banner.css
@@ -1,10 +1,6 @@
 /* eslint-disable */
 /* block specific CSS goes here */
 
-.mb-3 {
-  margin-bottom: 1rem !important;
-}
-
 #heroBanner {
   color: white;
   background-size: cover;
